compiler/testData/diagnostics/tests/multiplatform/incompatibles.ll.kt
// COMPARE_WITH_LIGHT_TREE
<!INCOMPATIBLE_MODIFIERS!>expect<!> <!INCOMPATIBLE_MODIFIERS!>actual<!> class <!ACTUAL_WITHOUT_EXPECT!>Sixth<!>
